--- a/src/assets/css/framework.scss
+++ b/src/assets/css/framework.scss
@@ -36,6 +36,10 @@
 @import "_mixins/tools.mixin.center";
 @import "_mixins/tools.mixin.filter";
 @import "_mixins/tools.mixin.fluid";
+@import "_mixins/tools.mixin.col";
+@import "_mixins/tools.mixin.col-padding";
+@import "_mixins/tools.mixin.row";
+@import "_mixins/tools.mixin.section";
 @import "_mixins/tools.mixin.visually-hidden";
 
 // Vendors
