--- a/src/assets/css/_settings/_settings.colors.scss
+++ b/src/assets/css/_settings/_settings.colors.scss
@@ -5,29 +5,30 @@
  */
 
 $fr-colored: (
+  'gray': (
+    'base': #A0A0A1,
+    'silver': #F8F8F8,
+    'light': #E2E3E5,
+    'raven': #737477,
+    'medium': #4D4E51,
+    'dark': #1A1919,
+  ),
   'blue': (
-    'base': #00A7E3,
-    'var1': #0081B0,
-    'var2': #006E96,
-    'var3': #005C7D,
+    'base': #22346F,
+    'dark': #001E3C,
+    'navy': #000F1E,
   ),
-  'black-pearl': (
-    'base': #030C12,
-    'var1': #071525,
-    'var2': #0A192B,
-    'var3': #0D2038,
+  'accent': (
+    'base': #DB0840,
+    'red': #DB0840,
+    'orange': #F2940A,
+    'yellow': #FAD50A,
+    'blue': #0A86CB,
   ),
-  'grey': (
-    'base': #F7F6F7,
-    'var1': #DEDEDE,
-    'var2': #C4C4C4,
-    'var3': #ABABAB,
-  ),
-  'text': (
-    'base': #2D353B,
-    'var1': #464A4D,
-    'var2': #7C8287,
-    'var3': #BCC5CC,
+  'interaction': (
+    'base': #DB0840,
+    'hover': #F30B47,
+    'active': #C30939,
   ),
 );
 
