--- a/src/assets/css/_mixins/_tools.mixin.col.scss
+++ b/src/assets/css/_mixins/_tools.mixin.col.scss
@@ -13,6 +13,8 @@
   @if $testing == true {
     padding-top: s(4);
     padding-bottom: s(4);
+    margin-top: s(1);
+    margin-bottom: s(1);
     position: relative;
     border-radius: 5px;
     background-color: c('white');
