--- a/src/assets/css/_mixins/_tools.mixin.section.scss
+++ b/src/assets/css/_mixins/_tools.mixin.section.scss
@@ -7,6 +7,8 @@
 @mixin make-section($behaviour: 'fixed', $padding: true, $testing: false) {
   @include center();
   max-width: if($behaviour == 'fixed', $fr-maxWidth, none);
+  margin-left: auto;
+  margin-right: auto;
 
   padding-left: 16px;
   padding-right: 16px;
