--- a/src/assets/css/_mixins/_tools.mixin.col-padding.scss
+++ b/src/assets/css/_mixins/_tools.mixin.col-padding.scss
@@ -4,7 +4,7 @@
  |--------------------------------------------------------------------------
  */
 
-@mixin make-col-padding($padding: true, $testing: false) {
+@mixin make-col-padding($padding: true) {
   padding-left: 6px;
   padding-right: 6px;
 
@@ -16,44 +16,6 @@
   @include media('>=sd') {
     padding-left: 12px;
     padding-right: 12px;
-  }
-
-  @if $testing == true and $padding == true {
-    position: relative;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      bottom: 0;
-    }
-
-    &::before {
-      border-right: 1px solid rgba(c('gray','light'), 1);
-      left: 6px;
-
-      @include media('>=t') {
-        left: 10px;
-      }
-
-      @include media('>=sd') {
-        left: 12px;
-      }
-    }
-
-    &::after {
-      border-right: 1px solid rgba(c('gray','light'), 1);
-      right: 6px;
-
-      @include media('>=t') {
-        right: 10px;
-      }
-
-      @include media('>=sd') {
-        right: 12px;
-      }
-    }
   }
 
   @if $padding == false {
