--- a/src/assets/css/framework.scss
+++ b/src/assets/css/framework.scss
@@ -41,6 +41,7 @@
 @import "_mixins/tools.mixin.offset";
 @import "_mixins/tools.mixin.row";
 @import "_mixins/tools.mixin.section";
+@import "_mixins/tools.mixin.spacing";
 @import "_mixins/tools.mixin.visually-hidden";
 
 
